# leti_zaoch

./: .gitignore  README.md
bd/curs/: bd_product_storage_msserver.md  bd_product_storage_postgress.md  curs.docx  er-digram  master - idz - dbo.erd
bd/lab/: maksimov_1335_bd_10lab.docx  maksimov_1335_bd_11lab.docx  maksimov_1335_bd_1lab.docx  maksimov_1335_bd_2lab.docx  maksimov_1335_bd_3lab.docx  maksimov_1335_bd_4lab.docx  maksimov_1335_bd_5lab.docx  maksimov_1335_bd_6lab.docx  maksimov_1335_bd_7lab.docx  maksimov_1335_bd_8lab.docx  maksimov_1335_bd_9lab.docx
bd/task/: task.docx
computer_graphics/lab1/project/: CMakeLists.txt
computer_graphics/lab1/project/src/c++/: main.cc
computer_graphics/lab1/project/src/c++/graphic/: drawField.cc  drawField.h  mainWindow.cc  mainWindow.h  settingPanel.cc  settingPanel.h
computer_graphics/lab1/project/src/c++/shapes/: sCircle.cc  sCircle.h  sLine.cc  sLine.h  sOriginPlane.cc  sOriginPlane.h  sPoint.cc  sPoint.h
computer_graphics/lab2/project/: CMakeLists.txt
computer_graphics/lab2/project/src/c++/: main.cc
computer_graphics/lab2/project/src/c++/grafic/: bizye.cc  bizye.h  mainwindow.cc  mainwindow.h  mainwindow.ui  moveitem.cc  moveitem.h
computer_graphics/lab3/project/: .clang-format  CMakeLists.txt
computer_graphics/lab3/project/src/c++/: main.cc
computer_graphics/lab3/project/src/c++/gui/: drawField.cc  drawField.h  mainWindow.cc  mainWindow.h
computer_graphics/lab3/project/src/c++/tools/: matrix.cc  matrix.h  sCamera.cc  sCamera.h  sPoint.cc  sPoint.h  sup.cc  sup.h
diskret_maths/task/: maksimov.doc
ekonomika/: them1.docx  them2.docx
element_base/idz/: Триггеры.docx
ewm/report/: maksimov_ref.docx
fizika/2 sem/: 4590165_p1022c2912z2779k5278m3696l5005c4340.tif  kr.docx  lab1.docx  lab1_1.docx  lab3.docx  lab3_1.docx  lab8.docx  lab8_1.docx  lab9.docx  lab9_1.docx
fizika/3 sem/: lab 1.doc  laba #6.docx  laba 10.docx  laba 16.docx
informatika/: maksimov.pptx  maksimov.xlsx
ing_grafika/kompas v20/: maksimov1.cdw  maksimov2.cdw  maksimov2_1.cdw  maksimov3.cdw  maksimov4.cdw  maksimov5.cdw  maksimov6.cdw  maksimov7.cdw  maksimov8.cdw  maksimov_к17.cdw  maksimov_к17_1.cdw  maksimov_к17_3.cdw  maksimov_к17_4.cdw  maksimov_к17_5.cdw
law/: Maksimov1335.docx
linux/lab4/project/: CMakeLists.txt
linux/lab4/project/src/c++/: main.cc  second_main.cc
linux/lab4/project/src/txt/: in_1.txt  in_2.txt
marketing/: maksmiv.docx
mat_analis/task/: Вариант№1.docx
mat_model/: maksimov_26.docx
maths_logic/kr/: kr.docx
metrologiya/2 laba/: lab2.docx
metrologiya/3 laba/: 3lab.docx
metrologiya/8 laba/: lab8.docx
metrologiya/task/: task_1.docx  task_2.doc
oimkrvvts/: Maksimov_1335.xlsx  Maksimov_1335_tus2.xlsx
oop/curs musatov/project/task1/: CMakeLists.txt
oop/curs musatov/project/task1/src/c++/: main.cpp
oop/curs musatov/project/task1/src/c++/Core/: core.cpp  core.h
oop/curs musatov/project/task1/src/c++/transport/: bus.cpp  bus.h  passengercar.cpp  passengercar.h  plane.cpp  plane.h  train.cpp  train.h  transportbase.cpp  transportbase.h  watervehicles.cpp  watervehicles.h
oop/curs musatov/project/task3/: CMakeLists.txt  output.txt
oop/curs musatov/project/task3/src/c++/: main.cpp
oop/curs musatov/project/task3/src/c++/factory/: factory.cpp  factory.h
oop/curs musatov/project/task3/src/c++/port/: port.cpp  port.h
oop/curs musatov/project/task3/src/c++/ship/: queueship.cpp  queueship.h  ship.cpp  ship.h
oop/curs musatov/project/task3/src/c++/utils/: random.cpp  random.h  writer.cpp  writer.h
oop/my/project/curs/task2/: CMakeLists.txt
oop/my/project/curs/task2/src/c++/: main.cpp
oop/my/project/curs/task2/src/c++/algo/: dijkstra.h
oop/my/project/curs/task2/src/c++/core/: Core.cpp  Core.h
oop/my/project/curs/task3/: CMakeLists.txt  log.txt
oop/my/project/curs/task3/src/c++/: main.cpp
oop/my/project/curs/task3/src/c++/department/: designer.cpp  designer.h  manager.cpp  manager.h  worker.cpp  worker.h
oop/my/project/curs/task3/src/c++/task/: taskbase.cpp  taskbase.h
oop/my/project/curs/task3/src/c++/utils/: random.cpp  random.h  writer.cpp  writer.h
oop/my/project/lab1/task2/: CMakeLists.txt
oop/my/project/lab1/task2/src/c++/: main.cpp
oop/my/project/lab1/task2/src/c++/Core/: dividingNumbers.cpp  dividingNumbers.h
oop/my/project/lab5/task8/: CMakeLists.txt
oop/my/project/lab5/task8/src/c++/: main.cpp
oop/my/project/lab5/task8/src/c++/core/: core.cpp
oop/my/project/lab5/task8/src/c++/read/: ReadFile.cpp  ReadFile.h
oop/my/project/lab5/task8/src/c++/sort/: SortStr.cpp  SortStr.h
oop/my/project/lab6/task12/: CMakeLists.txt
oop/my/project/lab6/task12/src/c++/bank/: CreateAccount.cpp  bankAccount.cpp  bankAccount.h
oop/my/project/lab8/task18/: CMakeLists.txt  test.txt
oop/my/project/lab8/task18/src/c++/: main.cpp
oop/my/project/lab8/task18/src/c++/bank/: bankAccount.cpp  bankAccount.h  bankTransaction.cpp  bankTransaction.h  createAccount.cpp
oop/my/project/lab9/task19/: CMakeLists.txt
oop/my/project/lab9/task19/src/c++/: main.cpp
oop/my/project/lab9/task19/src/c++/car/: car.cpp  car.h  racingcar.cpp  racingcar.h  sportcar.cpp  sportcar.h
oop/my/project/lab9/task19/src/c++/detail/: body.cpp  body.h  detail.cpp  detail.h  engine.cpp  engine.h  transmission.cpp  transmission.h  wheel.cpp  wheel.h
oop/my/project/lab9/task19/src/c++/factory/: factorycar.cpp  factorycar.h
operating_systems/: maksimov_ref.docx
otu/: Example.doc  LP_v3.doc  maksimov1335Example.mdl  maksimov_1335.mdl
otu/1/: CLASSiC.ini  classic.gid  classic.hlp
otu/pos/: !Title-1.doc  !Title-2.doc  Oglav.doc  Vich_Dan.doc  s21-28.doc  s29-46.doc  s47-57.doc  s58-64.doc  s5_8.doc  s65-71.doc  s72-82.doc  s83-91.doc  s9-20.doc
otu/proga/: OPIS_CL3.doc  Readme.doc
ovem/lab1/: .gitignore  CMakeLists.txt
peripheral_device_interfaces/: ask.doc  report.docx
philosophy/: Maksimov 1335 filo 2.docx  Maksimov 1335 filo.docx
shemotehnika/: Kurs_Schema_Maksimov1335.docx  krMaksimov1335.docx
sociology/: ref.docx
сomputer_information_protection/: referat_kuznechik.docx
(+2210 files in other folders)
